--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "cuetools (>=1.0.1,<2.0.0)",
+    "typer (>=0.20.1,<0.21.0)",
 ]
 
 [tool.poetry]
