--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.12"
 dependencies = [
     "cuetools (>=1.0.1,<2.0.0)",
     "typer (>=0.20.1,<0.21.0)",
+    "mutagen (>=1.47.0,<2.0.0)",
 ]
 
 [tool.poetry]
